<resources>
    <string name="app_name">FidelCard</string>
    <string name="intra_in_cont">Intra in cont</string>
    <string name="introdu_datele_pentru_a_intra_in_cont">Introdu datele pentru a accesa contul</string>
    <string name="nu_ai_un_cont_creeaza_l_acum">Nu ai un cont? Creeaza-l acum!</string>
    <string name="completeaza_datele_pentru_a_crea_un_nou_cont">Completeaza datele de mai jos pentru a crea un cont nou</string>
    <string name="ai_deja_un_cont_acceseaza_l_acum">Ai deja un cont? Acceseaza-l acum!</string>
    <string name="buna">Hei %1$s %2$s!</string>
    <string name="text_buton_creare_cont">Contul a fost creat cu succes!</string>
    <string name="adaugare_card_nou">Adaugare card nou</string>
    <string name="informatii_card">Informatii card</string>
    <string name="oferte">Oferte</string>
    <string name="profil">Profil</string>
    <string name="text_gardient">Informatii despre parteneri</string>
    <string name="datele_mele">Datele mele</string>
    <string name="data_eliberare_card">Data eliberare card</string>
    <string name="adauga_card">Adauga card</string>
    <string name="informatii_despre_carduri">Informatii despre carduri</string>
    <string name="oferte_actuale">Oferte actuale</string>
    <string name="feminin">feminin</string>
    <string name="masculin">masculin</string>
    <string name="numar_card">Numar card</string>
    <string name="format_data">Formatul acceptat este dd/mm/yyyy</string>


    <string-array name="SpinnerNumemagazin">
        <item>IKEA</item>
        <item>Carrefour</item>
        <item>LIDL</item>
    </string-array>

    <string name="validare_nume">Numele este invalid!</string>
    <string name="validare_nrCard">Numarul cardului nu este valid!</string>
    <string name="card_nou">\"Card nou: \"</string>
    <string name="sex">Alegeti sexul dumneavoastra</string>
    <string name="completati_data_de_eliberare_a_cardului">Completati data de eliberare a cardului</string>
    <string name="pentru_a_adauga_un_card_nou_apasa_click_aici">Pentru a adauga un card nou, apasa click aici:</string>
    <string name="lista_dorinte">Lista de dorinte</string>
    <string name="proiect_realizat_de">Proiect realizat de</string>
    <string name="florea_laura">Florea Laura</string>
    <string name="site_web_lidl">Site web LIDL</string>
    <string name="site_web_carrefour">Site web Carrefour</string>
    <string name="site_web_ikea">Site web IKEA</string>
    <string name="adauga_produs">Adauga produs</string>
    <string name="denumire_produs">Denumire produs</string>
    <string name="denumire_magazin">Denumire magazin</string>
    <string name="pret_produs">Pret produs</string>
    <string name="default_pret_value">-</string>
    <string name="apasa_aici_pentru_a_adauga_un_nou_produs_in_lista">Apasa aici pentru a adauga un nou produs in lista:</string>
    <string name="lista_ta_de_produse_dorite">Lista ta de produse dorite</string>
    <string name="validare_user">Te rugam sa introduci userul</string>
    <string name="validare_parola">Te rugam sa introduci parola</string>
    <string name="validare_campuri">Campurile sunt goale!</string>
    <string name="eroare_autentificare">A aparut o eroare la logare. Va rugam sa reincercati.</string>
    <string name="eroare">Oops! A aparut o eroare!</string>
    <string name="adauga_produs_eroare">Te rugam sa adaugi un produs</string>
    <string name="adauga_pret_produs_eroare">Pretul nu este valid</string>
    <string name="errMail">Introduceti emailul</string>
    <string name="errNume">Introduceti numele</string>
    <string name="errUsername">Introduceti username-ul</string>
    <string name="errParola">Introduceti parola</string>
    <string name="errInregistrare">Nu s-a putut realiza inregistrarea. Incercati din nou!</string>
    <string name="user_button">User</string>
    <string name="nume_parola_gresita">Nume sau parola gresita!</string>
    <string name="te_rugam_sa_te_loggezi">Te rugam sa te loghezi</string>
    <string name="apasa_aici_pentru_a_vizualiza_datele_profilului_tau">Apasa aici pentru a vizualiza datele profilului tau</string>
    <string name="apasa_aici_pentru_a_te_deconecta">Apasa aici pentru a te deconecta</string>
    <string name="coduri_promotionale_existente">Coduri promotionale existente</string>
    <string name="apasa_aici_pentru_a_adauga_un_cod_nou">Apasa aici pentru a adauga un cod nou:</string>
    <string name="cod_promotional">Cod promotional</string>
    <string name="reducere">Reducere (%)</string>
    <string name="adauga_un_produs_in_lista">Adauga un produs in lista</string>
    <string name="err_cod_promo">Te rugam sa adaugi un cod promotional</string>
    <string name="err_reducere">Reducerea nu este valida!</string>
    <string name="coduri_promotionale">CODURI PROMOTIONALE</string>
    <string name="datele_profilului">DATELE PROFILULUI</string>
    <string name="inregistrare_succes">Inregistrarea a fost efectuata cu succes!</string>
    <string name="err_inreg">Nu s-a putut realiza inregistrarea!</string>
    <string name="err_executeAsynk">eroare la executeAsync</string>
    <string name="dragomirescu_oana_alexandra">Dragomirescu Oana-Alexandra</string>
    <string name="grupa_1080_seria_c">Grupa 1080, Seria C</string>
    <string name="adauga_un_cod_promotional">Adauga un cod promotional</string>
    <string name="vizualizare_grafic_magazine">Vizualizare grafic magazine</string>
    <string name="vezi_site_uri_magazine">Vezi site-uri magazine</string>
    <string name="magazinele_partenere">Magazinele partenere</string>
    <string name="prenume">Prenume</string>
    <string name="nume">Nume</string>
    <string name="salvare">Salvare</string>
    <string name="id_card">ID Card</string>
    <string name="user">User</string>
    <string name="parola">Parola</string>
    <string name="creeaza_cont_nou">Creeaza cont nou</string>
    <string name="e_mail">E-Mail</string>
    <string name="cod">Cod</string>
    <string name="magazin">Magazin</string>
    <string name="reduceree">Reducere</string>
    <string name="denumire_produss">DENUMIRE PRODUS</string>
    <string name="denumire_magazinn">DENUMIRE MAGAZIN</string>
    <string name="pret">PRET</string>
    <string name="titlu_oferta">TITLU OFERTA</string>
    <string name="text_oferta">TEXT OFERTA</string>
    <string name="valabilitate_oferta">VALABILITATE OFERTA</string>
    <string name="nume_magazin">Nume magazin</string>


</resources>