<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_marginStart="5dp"
    android:orientation="horizontal"

    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <ImageView
        android:id="@+id/shoppingCart"
        android:layout_width="50dp"
        android:layout_marginTop="20dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_baseline_add_shopping_cart" />

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_site_magazine"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="25dp"
                android:hint="@string/denumire_produss"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:id="@+id/tvDenumireProdus"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="15dp"
                android:hint="@string/denumire_magazinn"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:id="@+id/tvDenumireMagazin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:hint="@string/pret"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:id="@+id/tvPret"/>
        </LinearLayout>
</LinearLayout>