<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".logare.RegisterActivity"
    android:layout_height="match_parent"
    >

    <View
        android:id="@+id/viewSus"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="117dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="@+id/viewSusdeschis"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_add_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="92dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/completeaza_datele_pentru_a_crea_un_nou_cont"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus"
        app:layout_goneMarginTop="40dp" />

    <EditText
        android:id="@+id/etParola"
        android:layout_width="321dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_parola"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEMail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/buton_rotunjit"
        android:text="@string/creeaza_cont_nou"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etParola" />

    <EditText
        android:id="@+id/etNume"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/nume"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser"
        app:layout_goneMarginTop="40dp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ai_deja_un_cont_acceseaza_l_acum"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/viewAlbastruDeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etEMail"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNume"
        app:layout_goneMarginTop="40dp" />

    <View
        android:id="@+id/viewAlbastruInchis"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/wavesus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus" />


    <View
        android:id="@+id/viewAlbastruDeschis"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/wavesus_deschis"
        app:layout_constraintBottom_toTopOf="@+id/viewSusdeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/viewSusdeschis"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>