<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".wishlist.AddWishlistActivity">
    <View
        android:id="@+id/viewSus"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/viewAlbastruInchis"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/wavesus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_denumire_produs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAlbastruInchis">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_add_denumire_produs"
        android:layout_width="363dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:background="@drawable/colturi_rotunjite"
        android:hint="@string/denumire_produs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_add_denumire_produs" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_add_pret_produs"
        android:layout_width="363dp"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:background="@drawable/colturi_rotunjite"
        android:hint="@string/pret_produs"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_add_pret_produs" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_add_denumire_magazin"
        android:layout_width="363dp"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:background="@drawable/colturi_rotunjite"
        android:hint="@string/denumire_magazin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_add_denumire_magazin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_denumire_magazin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiet_add_denumire_produs">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_pret_produs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiet_add_denumire_magazin">

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/viewAlbastruDeschis"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/wavesus_deschis"
        app:layout_constraintBottom_toTopOf="@+id/viewSusdeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/viewSusdeschis"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewSus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewSus"
        app:layout_constraintVertical_bias="0.787"
        app:srcCompat="@drawable/ic_baseline_list_alt_27" />

    <ImageButton
        android:id="@+id/ibtn_add_produs_dorit"
        android:layout_width="89dp"
        android:layout_height="96dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/adauga_produs"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="@+id/viewAlbastruDeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiet_add_pret_produs"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/tvAdaugaInLista"
        android:layout_width="287dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"

        android:text="Adauga un produs in lista"
        android:textColor="#ffffff"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewSus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>